fix: adding a flex-wrap to .MainContent
Adding a flex-wrap to wrap dashboard content and input-output content
for smaller screens. Also, changed the annotation of the MainContent to
  use a <main> markup tag.

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 .MainContent {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .InputResultsContent {
